RESOLVED FIXED272452
[WebXR][WPE] REGRESSION(276825@main): ASSERTION FAILED: `gl.checkFramebufferStatus(GL::READ_FRAMEBUFFER) == GL::FRAMEBUFFER_COMPLETE` in `WebXROpaqueFramebuffer::resolveMSAAFramebuffer()`
https://bugs.webkit.org/show_bug.cgi?id=272452
Summary [WebXR][WPE] REGRESSION(276825@main): ASSERTION FAILED: `gl.checkFramebufferS...
Vitaly Dyackhov
Reported 2024-04-10 02:31:05 PDT
Stack trace: ``` STDERR: 1 0x7f769cea38b6 WTFCrash STDERR: 2 0x7f76991f5ef0 WTF::isIntegralOrPointerType() STDERR: 3 0x7f769f5762a3 WebCore::WebXROpaqueFramebuffer::resolveMSAAFramebuffer(WebCore::GraphicsContextGL&) STDERR: 4 0x7f769f57657c WebCore::WebXROpaqueFramebuffer::blitShared(WebCore::GraphicsContextGL&) STDERR: 5 0x7f769f5760c1 WebCore::WebXROpaqueFramebuffer::endFrame() STDERR: 6 0x7f769f5967f4 WebCore::WebXRWebGLLayer::endFrame() STDERR: 7 0x7f769f57b3c8 operator() STDERR: 8 0x7f769f593008 call STDERR: 9 0x7f7699b19e6f WTF::Function<void ()>::operator()() const STDERR: 10 0x7f769f56f3b8 WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::WebXRSession>(WebCore::WebXRSession&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}::operator()() const STDERR: 11 0x7f769f573ea4 WTF::Detail::CallableWrapper<WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::WebXRSession>(WebCore::WebXRSession&, WebCore::TaskSource, WTF::Function<void ()>&&)::{lambda()#1}, void>::call() STDERR: 12 0x7f7699b19e6f WTF::Function<void ()>::operator()() const STDERR: 13 0x7f76a012994e WebCore::EventLoopFunctionDispatchTask::execute() STDERR: 14 0x7f76a0128a3f WebCore::EventLoop::run(std::optional<WTF::ApproximateTime>) STDERR: 15 0x7f76a02b4be1 WebCore::WindowEventLoop::didReachTimeToRun() STDERR: 16 0x7f76a02cc086 void std::__invoke_impl<void, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(std::__invoke_memfun_deref, void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) STDERR: 17 0x7f76a02cbff1 std::__invoke_result<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>::type std::__invoke<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&>(void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) STDERR: 18 0x7f76a02cbf67 void std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) STDERR: 19 0x7f76a02cbef9 void std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>::operator()<, void>() STDERR: 20 0x7f76a02cbd54 WTF::Detail::CallableWrapper<std::_Bind<void (WebCore::WindowEventLoop::*(WebCore::WindowEventLoop*))()>, void>::call() STDERR: 21 0x7f7699b19e6f WTF::Function<void ()>::operator()() const STDERR: 22 0x7f7699bfea62 WebCore::Timer::fired() STDERR: 23 0x7f76a108a8ee WebCore::ThreadTimers::sharedTimerFiredInternal() STDERR: 24 0x7f76a108a1cb operator() STDERR: 25 0x7f76a1094240 call STDERR: 26 0x7f7699b19e6f WTF::Function<void ()>::operator()() const STDERR: 27 0x7f76a1036566 WebCore::MainThreadSharedTimer::fired() STDERR: 28 0x7f76a103f10c void std::__invoke_impl<void, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(std::__invoke_memfun_deref, void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) STDERR: 29 0x7f76a103f085 std::__invoke_result<void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>::type std::__invoke<void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&>(void (WebCore::MainThreadSharedTimer::*&)(), WebCore::MainThreadSharedTimer*&) STDERR: 30 0x7f76a103effb void std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) STDERR: 31 0x7f76a103ef8d void std::_Bind<void (WebCore::MainThreadSharedTimer::*(WebCore::MainThreadSharedTimer*))()>::operator()<, void>() ```
Attachments
Vitaly Dyackhov
Comment 1 2024-04-10 02:38:29 PDT
EWS
Comment 2 2024-04-12 00:23:31 PDT
Committed 277419@main (8ee0645671b6): <https://commits.webkit.org/277419@main> Reviewed commits have been landed. Closing PR #27076 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-12 00:24:17 PDT
Note You need to log in before you can comment on or make changes to this bug.