[WebXR][WPE] REGRESSION(276825@main): ASSERTION FAILED: `gl.checkFramebufferStatus(GL::READ_FRAMEBUFFER) == GL::FRAMEBUFFER_COMPLETE` in `WebXROpaqueFramebuffer::resolveMSAAFramebuffer()` https://bugs.webkit.org/show_bug.cgi?id=272452

Reviewed by Mike Wyrzykowski.

Since we never create the internal MSAA color buffer on non-apple
platforms, we should always draw directly to `m_drawFramebuffer`.

* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
(WebCore::WebXROpaqueFramebuffer::blitShared):

Canonical link: https://commits.webkit.org/277419@main